src/test/ui/parser/match-vec-invalid.stderr
error: expected one of `,` or `@`, found `..`
  --> $DIR/match-vec-invalid.rs:4:25
   |
LL |         [1, tail.., tail..] => {},
   |                         ^^ expected one of `,` or `@` here

error: aborting due to previous error

